# streamlit_project

./: app.py  pyproject.toml
data/: 20250407_data4streamlit.csv  20250408_data43d.csv  20250408_data4streamlit.csv
